xrpl-escrow-stdlib/tests/finish_result/compile_fail/reject_with_positive.rs
use xrpl_escrow_stdlib::FinishResult;

fn main() {
    let _ = FinishResult::reject_with::<1>();
}
